--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,6 @@
         }
     ],
     "manifest_version": 2,
-    "permissions": ["tabs", "storage", "cookies", "http://*/", "https://*/"],
+    "permissions": ["tabs", "storage", "<all_urls>"],
     "web_accessible_resources": ["theme/*.css"]
 }
